--- a/8.4-role/requirements.yml
+++ b/8.4-role/requirements.yml
@@ -4,8 +4,8 @@
     scm: git
     version: "1.11.0"
   - name: lighthouse
-    src: git@github.com:OKryuchenko/lighthouse-role.git
+    src: git@github.com:panarin0290/lighthouse-role.git
     scm: git
   - name: vector
-    src: git@github.com:OKryuchenko/vector-role.git
+    src: git@github.com:panarin0290/vector-role.git
     scm: git
